updated DP in index which has BG

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="https://lh3.googleusercontent.com/pw/ACtC-3fb0gB33vUlmkINWWvRvpeM3EL7ToT07acSyqjV-FkolhSBuscqSZPwZyNDOsmCnpnuT5WnhIIn7C_RqgEo3-KvhcdtBoxv5Wn7jxqbhc2nLcMyjSTm3TSIZuSz5lAS_o-Hca3kVxpGHDYKWX4gtoPm=s244-no"
+      <td><img src="https://lh3.googleusercontent.com/pw/ACtC-3ceiR12nweaRwvS1sQTvlw7ZTuXP6RyiiuVr6iXa0uk1JXSFY9vn-kaibOUqDzb4t2sD5mAj15j23SDzIFewxWRZ3878WRE8kAZ08PCWqzcpZ6tD0FCBIeK417cwiCF63zg1Ax-Yy_FNtTU-V3Becpj=s244-no"
         alt="OOPS! failed to load" /></td>
       <td><h1>PRAGNAY BABU K</h1>
         <p>
@@ -100,7 +100,8 @@
 <!-- among us - Strongest crewmate -->
 <!--   CoDM   -    Legenday Tier   -->
 <!--   PUBG   -       Ace ⭐6      -->
-<!--https://photos.google.com/search/_cAF1QipN~uEqn2WLQjD-EuUydaq49scT33KOJoz-I_Pragnay%20Praggy/photo/AF1QipNub7HOF7M12_B_RbKPSK2E1lwmrqQdVH-wPaAM-->
+<!-- with bg https://lh3.googleusercontent.com/pw/ACtC-3ceiR12nweaRwvS1sQTvlw7ZTuXP6RyiiuVr6iXa0uk1JXSFY9vn-kaibOUqDzb4t2sD5mAj15j23SDzIFewxWRZ3878WRE8kAZ08PCWqzcpZ6tD0FCBIeK417cwiCF63zg1Ax-Yy_FNtTU-V3Becpj=s244-no-->
+<!-- w/o  bg https://lh3.googleusercontent.com/pw/ACtC-3fb0gB33vUlmkINWWvRvpeM3EL7ToT07acSyqjV-FkolhSBuscqSZPwZyNDOsmCnpnuT5WnhIIn7C_RqgEo3-KvhcdtBoxv5Wn7jxqbhc2nLcMyjSTm3TSIZuSz5lAS_o-Hca3kVxpGHDYKWX4gtoPm=s244-no-->
 <!--  
   <button onclick="goBack()">Go Back</button>
   <script>
