making small changes in index.html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   
   <h3>eBooks and reading</h3>
   <ul>
-    <li>The complete C++ learning bootcamp.</li>
-    <li>The complete Pyhton learning bootcamp.</li>
+    <li>Learning complete C++ bootcamp.</li>
+    <li>Learning complete Python bootcamp.</li>
+    <li>Learning complete Web Development bootcamp.</li>
   </ul>
 
   <hr>
