--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <hr>
   
-  <h3>Games I Played most during pandamic</h3>
+  <h3>Games I Played most during pandemic</h3>
   <table border="1">
     <thead>
       <tr>
