--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Contact-me</title>
+		<link rel="stylesheet" href="styles.css">
+		<link rel="icon" href="favicon.ico">
   </head>
 
   <body>
@@ -15,6 +17,7 @@
     </p>
     <p><a href="+91-8610000926">+91-8610000926</a></p>
     <p>praggypraggy@gmail.com</p>
+		<hr>
 		<form action="mailto:praggypraggy@gmail.com" method="POST" enctype="text/plain">
 			<label>Your Name:</label>
 			<input type="text" name="YourName" value=""><br>
