--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         alt="OOPS! failed to load" /></td>
       <td><h1>PRAGNAY BABU K</h1>
         <p>
-          <em>Student @
+          <em class="stu">Student @
             <strong><a href="https://stjosephs.ac.in/">St. Joseph's College of Engineering</a></strong>
           </em>
         </p>
