linking the added styled pages

--- a/index.html
+++ b/index.html
@@ -93,7 +93,18 @@
   </table>
   
   <hr>
-  <footer align="center"><a href="contact.html">Contact-me</a></footer>
+  <footer align="center">
+    <table cellspacing="10" class="center">
+      <tr>
+        <td>
+          <button><a href="contact.html">Contact-me</a></button>
+        </td>
+        <td>
+          <button><a href="styled.html">Another styled website</a></button>
+        </td>
+      </tr>
+    </table>
+  </footer>
 </body>
 
 
