--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <strong><a href="https://stjosephs.ac.in/">St. Joseph's College of Engineering</a></strong>
           </em>
         </p>
-        <p>I am persuing my UG in BE-CSE.I ❤ Conding.</p>
+        <p>I am persuing my UG in BE-CSE.I ❤ Coding.</p>
       </td>
     </tr>
   </table>
