--- a/styled.html
+++ b/styled.html
@@ -29,7 +29,7 @@
                 alt="OOPS! failed to load" />
             <h2>Hello.</h2>
             <p>I am persuing my UG in BE-CSE. <br>
-                I ❤ Conding.</p>
+                I ❤ Coding.</p>
         </div>
         <hr />
         <div class="skills">
